<resources>
    <string name="app_name">MagicLibary</string>
    <string name="bgsplash" />
    <string name="magic_library">Magic Library</string>
    <string name="cards">Cards</string>
    <string name="sets">Sets</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="cardlist">Card list</string>
    <string name="button">Button</string>
    <string name="filter_for_consultation">Filter for consultation</string>
    <string name="search">search</string>
    <string name="match_colors">Match Colors Exactly (use \'and\' instead of \'or\')</string>
    <string name="exclude">Exclude Unselected Colors (limit by selection)</string>
    <string name="match_multcolors">Match Multicolored Cards Only (2+ colors)</string>
    <string name="search_by_color">Search by color:</string>
    <string name="display_cards">Displays a magic card set</string>
    <string name="failedtoconnect">Failed to connect</string>
    <string name="amount_per_page">Amount Per Page</string>
    <string name="name">Name</string>
    <string name="label_code">Code:</string>
    <string name="label_release">ReleaseDate:</string>
    <string name="label_mkm_name">Mkm_Name:</string>
    <string name="label_mkm_id">Mkm_id:</string>
    <string name="label_border">Border:</string>
    <string name="label_type">Type:</string>
    <string name="label_name">Name:</string>
    <string name="no_sets_found">No sets found.</string>
    <string name="sets_list">Sets List</string>
    <string name="display_sets">Display Sets</string>
    <string name="sair">sair</string>
    <string name="siteofficial">site offical</string>
    <string name="site">Site</string>
</resources>
