<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Set"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/CardView.Light"
        android:id="@+id/set"
        >
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:id="@+id/label_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/label_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/label_code"
                android:id="@+id/content_code"/>

            <TextView
                android:id="@+id/label_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/label_name"
                app:layout_constraintTop_toBottomOf="@+id/label_code" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/content_code"
                app:layout_constraintStart_toEndOf="@id/label_name"
                android:id="@+id/content_name" />

            <TextView
                android:id="@+id/label_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:text="@string/label_type"
                app:layout_constraintTop_toBottomOf="@+id/label_name"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/content_name"
                app:layout_constraintStart_toEndOf="@id/label_type"
                android:id="@+id/content_type" />

            <TextView
                android:id="@+id/label_border"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:text="@string/label_border"
                app:layout_constraintTop_toBottomOf="@id/label_type"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/content_type"
                app:layout_constraintStart_toEndOf="@id/label_border"
                android:id="@+id/content_border" />

            <TextView
                android:id="@+id/label_mkm_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:text="@string/label_mkm_id"
                app:layout_constraintTop_toBottomOf="@id/label_border"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/content_border"
                app:layout_constraintStart_toEndOf="@id/label_mkm_id"
                android:id="@+id/content_mkm_id" />

            <TextView
                android:id="@+id/label_mkm_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:text="@string/label_mkm_name"
                app:layout_constraintTop_toBottomOf="@id/label_mkm_id"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/content_mkm_id"
                app:layout_constraintStart_toEndOf="@id/label_mkm_name"
                android:id="@+id/content_mkm_name" />

            <TextView
                android:id="@+id/label_release"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_release"
                app:layout_constraintTop_toBottomOf="@id/label_mkm_name"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/content_mkm_name"
                app:layout_constraintStart_toEndOf="@id/label_release"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/content_release" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:backgroundTint="@color/gold"
        android:background="@color/gold"
        app:layout_constraintTop_toBottomOf="@id/set"
        >
    </View>


</android.support.constraint.ConstraintLayout>