<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".TelaInicial"
    android:fontFamily="sans-serif-condensed">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/black">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="cursive"
            android:text="@string/magic_library"
            android:textColor="@color/gold"
            android:textSize="60sp" />
    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="14dp"
        android:rowCount="2"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:srcCompat="@mipmap/splashscreenbg"
            android:layout_marginTop="90dp"
            android:clickable="true"
            android:onClick="showCards"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:srcCompat="@mipmap/set"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="90dp"
            android:clickable="true"
            android:onClick="showSets"/>

        <TextView
            android:id="@+id/textCards"
            android:layout_width="120dp"
            android:layout_height="20dp"
            android:fontFamily="monospace"
            android:paddingStart="40dp"
            android:text="@string/cards"
            android:textAlignment="textStart"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textSets"
            android:layout_width="110dp"
            android:layout_height="20dp"
            android:layout_marginLeft="100dp"
            android:fontFamily="casual"
            android:paddingStart="40dp"
            android:text="@string/sets"
            android:textStyle="bold" />
    </GridLayout>

</LinearLayout>